src/user.css
/* ... */
.lyrics-lyricsContainer-LyricsContainer {
  --lyrics-color-active: white !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.5) !important;
}

.lyrics-lyricsContainer-LyricsLine {
  text-shadow: none;
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
  transition-property: transform, color, opacity, text-shadow !important;
}

.lyrics-lyricsContainer-Karaoke-Word {
  transition: var(--word-duration) color ease, var(--word-duration) text-shadow ease !important;
  text-shadow: none;
}

.lyrics-lyricsContainer-Karaoke-WordActive,
.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine-active {
  text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
}

.lyrics-lyricsContainer-LyricsUnavailableMessage {
  color: rgba(255, 255, 255, 0.4) !important;
}

.lyrics-lyricsContainer-Provider {
  background: none !important;
}

/* lyrics pages fix */

.main-lyricsCinema-nonDisplayedArea .main-topBar-topbarContent {
  display: none;
}

.lyrics-lyrics-container {
  margin-top: 0;
}

.lyrics-lyricsContainer-LyricsBackground {
  margin-bottom: -110px;
  margin-top: -10px;
}

.lyrics-lyricsContainer-Provider {
  padding-bottom: 40px;
}

#lyrics-fullscreen-container
  > .lyrics-lyricsContainer-LyricsContainer:has(.lyrics-lyricsContainer-UnsyncedLyricsPage)
  .lyrics-lyricsContainer-Provider {
  padding-bottom: 35px;
}

.lyrics-lyricsContainer-LyricsUnsyncedPadding {
  height: 20vh;
}

.lyrics-config-button-container {
  bottom: 15px;
}

#lyrics-fullscreen-container .lyrics-config-button-container {
  bottom: 10px;
}

#fad-lyrics-plus-container .lyrics-config-button-container {
  bottom: 32px;
}

body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > *:not(.Root__main-view),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view
  > *:not(.main-view-container),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view
  > .main-view-container
  > *:not(.under-main-view),
body:has(#lyrics-fullscreen-container)
  > #main
  > .Root
  > .Root__top-container
  > .Root__main-view::before {
  display: none !important;
}

body:has(#lyrics-fullscreen-container) > #main > .Root {
  --panel-gap: 0 !important;
}

.hKccLC {
  background-color: var(--spice-accent);
  color: var(--spice-alt-text);
  border-radius: var(--border-radius-3);
}

.ksogXh:hover {
  color: var(--spice-rgb-subtext);
}

.main-view-container__scroll-node-child {
  padding-bottom: 118px;
}

.view-homeShortcutsGrid-imageContainer {
  padding: 6px;
}

.view-homeShortcutsGrid-shortcut .view-homeShortcutsGrid-image {
  border-radius: var(--border-radius-3);
}

.main-trackList-playsHeader {
  width: 12.8ch;
}

.main-trackList-durationHeader {
  margin-left: 30px;
}

.main-trackList-rowSectionEnd {
  margin: auto;
}

.main-trackList-column {
  padding-left: 10px;
}

.main-trackList-rowSectionVariable[aria-colindex='3'] .cPwEdQ,
.main-trackList-rowSectionVariable[aria-colindex='3'] .main-trackList-text {
  padding-left: 8.5px;
}

.main-trackList-rowSectionVariable[aria-colindex='4'] .eDbSCl {
  padding-left: 14.5px;
}

.main-trackList-rowSectionVariable[aria-colindex='3'] .main-trackList-rowPlayCount {
  padding-left: 0px;
}

.SxHlW6byhoJSUJNugaE1 .k6Nq7pavAmiyJlxj52QA {
  color: var(--spice-alt-text);
}

.npv-background-image__overlay {
  background-color: rgba(var(--spice-rgb-layer-shadow), 0.7) !important;
}

.main-rootlist-rootlistItemOverlay {
  display: none;
}

/* Fix Spotify moving up caused by lyric page */

.Root__top-container {
  position: fixed;
}

/* Fix lyrics get covered by controls */
.lyrics-lyrics-contentContainer {
  margin-bottom: 120px;
}

/* Spicetify power bar */

#power-bar-wrapper::before {
  z-index: -1;
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--border-radius-1) !important;
  background-image: var(--noise-texture);
  opacity: var(--noise-opacity);
}

#power-bar-wrapper {
  background-color: rgba(var(--spice-rgb-main), 0.8) !important;
  backdrop-filter: blur(50px) saturate(1.5);
  border-radius: var(--border-radius-1) !important;
}

#power-bar-search.has-suggestions {
  border-bottom: none !important;
  width: 100% !important;
}

#power-bar-search:focus-visible {
  border-bottom: 2px solid var(--spice-accent) !important;
  border-radius: var(--border-radius-3) !important;
}

#suggestions-container h5 {
  font-size: 1.1em !important;
  color: var(--spice-subtext) !important;
}

.suggestions-category {
  border: none !important;
  padding-bottom: 0 !important;
}

.suggestion-item__active {
  background-color: var(--spice-accent) !important;
  border-radius: var(--border-radius-3) !important;
}

.suggestion-item__img {
  border-radius: 10% !important;
}

/* LibraryX */

/* Top container */

.Root__top-container {
  padding-top: 0 !important;
}

/* Topbar */

.main-topBar-container > *:not(button):not(.main-topBar-historyButtons),
.main-topBar-topbarContent {
  -webkit-app-region: drag !important;
}

/* Main view */

/* rounded main view container corners */
.Root__main-view::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  border-radius: var(--border-radius-1);
  box-shadow: 0 -8px 0 var(--spice-sidebar), 0 8px 0 var(--spice-sidebar);
  pointer-events: none;
}

.Root__main-view {
  border-radius: var(--border-radius-1) !important;
  top: 64px;
  height: calc(100% - 48px);
  overflow: visible;
}

.main-view-container__scroll-node-child-spacer {
  height: 64px !important;
}

.main-entityHeader-background,
.main-entityHeader-background.main-entityHeader-gradient {
  margin-top: 64px;
}

.main-view-container {
  margin-top: -64px;
}

.main-view-container__scroll-node:has(.lyrics-lyricsContainer-LyricsContainer) {
  margin-top: 64px;
}

.contentSpacing:not(.artist-artistDiscography-topBar, .search-searchCategory-container) {
  padding-top: 20px;
}
/* ... */

